--- a/labs/architecture-examples/rappidjs/app/view/TodoView.xml
+++ b/labs/architecture-examples/rappidjs/app/view/TodoView.xml
@@ -1,55 +1,60 @@
 <ui:View xmlns="http://www.w3.org/1999/xhtml"
-         xmlns:js="js.core" xmlns:ui="js.ui">
+         xmlns:js="js.core" xmlns:ui="js.ui" componentClass="{todo.status()}">
     <js:Script>
         <![CDATA[
-        (function (Base, Bindable, Content) {
+        (function () {
+            var ENTER_KEY = 13;
+            var INPUT_BLUR = "blur";
+
             return {
-                defaults:{
-                    componentClass: "todo",
+                defaults: {
                     editing: false
                 },
-                events: [
-                    "remove"
-                ],
-                editTodo:function (e, div) {
-                    var todo = div.find("$item");
-                    this.set("editing",true);
-                    e.$.stopPropagation();
-                    // we don't use jquery, so we have to select this the old fashioned way
-                    div.$el.parentNode.parentNode.getElementsByTagName("input")[1].select();
+                $classAttributes: ['todo', 'inputElement'],
+                events: ["remove"],
+                editTodo: function (e) {
+                    this.set("editing", true);
+                    e.preventDefault();
+
+                    this.$.inputElement.$el.select();
+                    return false;
                 },
-                checkTodo:function (e, input) {
+                checkTodo: function () {
                     var todo = this.get("todo");
-                    todo.setDone(!todo.get("isDone"));
+                    todo.setCompleted(!todo.isCompleted());
+                    todo.save();
                 },
-                updateTodo:function (e, input) {
+                preventEditing: function(e){
+                    e.stopPropagation();
+                },
+                updateTodo: function (e) {
                     var todo;
-                    if (e.$.keyCode === 13) {
+                    if (e.domEvent.keyCode === ENTER_KEY || e.domEvent.type === INPUT_BLUR) {
                         todo = this.get("todo");
-                        this.set("editing",false);
-                    } else if (e.$.keyCode === 27) {
-                        todo = this.get("todo");
-                        var content = todo.get("content");
-
-                        input.$el.blur();
-
-                        todo.set("content", content);
-                        this.set("editing",false);
-                    } else if (e.$.type === "blur") {
-                        todo = this.get("todo");
-                        this.set("editing",false);
+                        if (!todo.hasTitle()) {
+                            this.trigger("remove", todo);
+                        } else {
+                            this.set("editing", false);
+                            todo.save();
+                        }
                     }
                 },
-                triggerOnRemove: function(e, el){
-                    this.trigger("onremove",this.get("todo"));
+                triggerOnRemove: function () {
+                    this.trigger("remove", this.get("todo"));
                 },
-                _renderEditing: function(editing){
-                    if(editing){
+                _renderEditing: function (editing) {
+                    if (editing) {
                         this.addClass("editing");
-                    }else{
+                    } else {
                         this.removeClass("editing");
+                        this.$.inputElement.$el.blur();
                     }
-
+                },
+                trim: function(title){
+                    if(title){
+                        return title.trim();
+                    }
+                    return "";
                 }
 
             }
@@ -57,19 +62,14 @@
         ]]>
     </js:Script>
     <js:Template name="layout">
-        <div class="{todo.status()}">
-            <div class="display">
-                <input class="check" type="checkbox" onchange="checkTodo"
-                       checked="{todo.isDone}"/>
-
-                <label class="todo-content" ondblclick="editTodo">{todo.content}</label>
-                <span class="todo-destroy" onclick="triggerOnRemove"></span>
+            <div class="view" ondblclick="editTodo">
+                <input class="toggle" type="checkbox" onclick="checkTodo" ondblclick="preventEditing"
+                       checked="{todo.completed}"/>
+                <label>{todo.title}</label>
+                <button class="destroy" onclick="triggerOnRemove"/>
             </div>
-            <div class="edit">
-                <input class="todo-input" type="text" value="{{todo.content}}"
-                       onkeyup="updateTodo" onblur="updateTodo"/>
-            </div>
-        </div>
+            <input class="edit" cid="inputElement" type="text" value="{{todo.title|trim()}}"
+                   onkeyup="updateTodo" onblur="updateTodo" updateOnEvent="change"/>
     </js:Template>
 </ui:View>
 
