Rewrite clear button view to use the new `action` helper.

--- a/dependency-examples/emberjs_require/js/app/templates/clear_button.html
+++ b/dependency-examples/emberjs_require/js/app/templates/clear_button.html
@@ -1,1 +1,3 @@
-Clear completed ({{completed}})
+<button {{action "clearCompleted" target="controller"}}>
+	Clear completed ({{completed}})
+</button>
