Rewrite the items view.
Cleanup `Ember.CollectionView` template, on editing use a contextual view.
Fix race condition issue with focusOut/insertNewline when editing last item.

--- a/dependency-examples/emberjs_require/js/app/templates/items.html
+++ b/dependency-examples/emberjs_require/js/app/templates/items.html
@@ -1,13 +1,7 @@
-{{#collection contentBinding="controller" controllerBinding="controller" id="todo-list" tagName="ul" itemClassBinding="content.completed content.editing" }}
-	{{#unless content.editing}}
-		{{#view controller.ItemView contentBinding="content" }}
-			{{view Ember.Checkbox valueBinding="content.completed" class="toggle"}}
-			{{#view Ember.View tagName="label" todoBinding="content"}}
-				{{todo.title}}
-			{{/view}}
-			{{view Ember.Button target="controller" action="removeObject" class="destroy" todoBinding="content"}}
-		{{/view}}
-	{{else}}
-		{{view controller.ItemEditor todoBinding="content" valueBinding="content.title"}}
-	{{/unless}}
-{{/collection}}
+{{#unless view.content.editing}}
+	{{view Ember.Checkbox checkedBinding="view.content.completed" class="toggle"}}
+	<label>{{view.content.title}}</label>
+	<button {{action removeItem}} class="destroy" ></button>
+{{else}}
+	{{view view.ItemEditorView contentBinding="view.content"}}
+{{/unless}}
