Update stats view bindings and force view scope (might be an Ember bug).

--- a/dependency-examples/emberjs_require/js/app/templates/stats.html
+++ b/dependency-examples/emberjs_require/js/app/templates/stats.html
@@ -1,5 +1,7 @@
-{{#if oneLeft }}
-	<strong>{{remaining}}</strong> item left
-{{else}}
-	<strong>{{remaining}}</strong> items left
-{{/if}}
+{{#with view}}
+	{{#if oneLeft }}
+		<strong>{{entries.remaining}}</strong> item left
+	{{else}}
+		<strong>{{entries.remaining}}</strong> items left
+	{{/if}}
+{{/with}}
