Update clear button view bindings. Force the view scope.

--- a/dependency-examples/emberjs_require/js/app/templates/clear_button.html
+++ b/dependency-examples/emberjs_require/js/app/templates/clear_button.html
@@ -1,3 +1,5 @@
-<button {{action "clearCompleted" target="controller"}}>
-	Clear completed ({{completed}})
-</button>
+{{#with view}}
+	<button {{action "clearCompleted" target="entries"}} >
+		Clear completed ({{entries.completed}})
+	</button>
+{{/with}}
