--- a/labs/architecture-examples/rappidjs/app/view/TodoView.xml
+++ b/labs/architecture-examples/rappidjs/app/view/TodoView.xml
@@ -2,62 +2,72 @@
 		 xmlns:js="js.core" xmlns:ui="js.ui" componentClass="{todo.status()}">
 	<js:Script>
 		<![CDATA[
-		(function () {
+		(function() {
 			var ENTER_KEY = 13;
-			var INPUT_BLUR = "blur";
 
 			return {
 				defaults: {
 					editing: false
 				},
+
 				$classAttributes: ['todo', 'inputElement'],
-				events: ["remove"],
-				editTodo: function (e) {
-					this.set("editing", true);
+
+				events: ['remove'],
+
+				editTodo: function( e ) {
+					this.set( 'editing', true );
 					e.preventDefault();
 
 					this.$.inputElement.$el.select();
 					return false;
 				},
-				checkTodo: function () {
-					var todo = this.get("todo");
-					todo.setCompleted(!todo.isCompleted());
+
+				checkTodo: function() {
+					var todo = this.get('todo');
+
+					todo.setCompleted( !todo.isCompleted() );
 					todo.save();
 				},
-				preventEditing: function(e){
+
+				preventEditing: function( e ) {
 					e.stopPropagation();
 				},
-				updateTodo: function (e) {
+
+				updateTodo: function( e ) {
 					var todo;
-					if (e.domEvent.keyCode === ENTER_KEY || e.domEvent.type === INPUT_BLUR) {
-						todo = this.get("todo");
-						if (!todo.hasTitle()) {
-							this.trigger("remove", todo);
-						} else {
-							this.set("editing", false);
+
+					if ( e.domEvent.keyCode === ENTER_KEY || e.domEvent.type === 'blur' ) {
+						todo = this.get('todo');
+
+						if ( todo.hasTitle() ) {
+							this.set( 'editing', false );
 							todo.save();
+						} else {
+							this.trigger( 'remove', todo );
 						}
 					}
 				},
-				triggerOnRemove: function () {
-					this.trigger("remove", this.get("todo"));
+
+				triggerOnRemove: function() {
+					this.trigger( 'remove', this.get('todo') );
 				},
-				_renderEditing: function (editing) {
-					if (editing) {
-						this.addClass("editing");
+
+				_renderEditing: function( editing ) {
+					if ( editing ) {
+						this.addClass('editing');
 					} else {
-						this.removeClass("editing");
+						this.removeClass('editing');
 						this.$.inputElement.$el.blur();
 					}
 				},
-				trim: function(title){
-					if(title){
+
+				trim: function( title ) {
+					if( title ) {
 						return title.trim();
 					}
-					return "";
+					return '';
 				}
-
-			}
+			};
 		})
 		]]>
 	</js:Script>
@@ -72,4 +82,3 @@
 				   onkeyup="updateTodo" onblur="updateTodo" updateOnEvent="change"/>
 	</js:Template>
 </ui:View>
-
