Fix clear button element id.

--- a/dependency-examples/emberjs_require/js/app/templates/clear_button.html
+++ b/dependency-examples/emberjs_require/js/app/templates/clear_button.html
@@ -1,5 +1,5 @@
 {{#with view}}
-	<button {{action "clearCompleted" target="entries"}} >
+	<button id="clear-completed" {{action "clearCompleted" target="entries"}} >
 		Clear completed ({{entries.completed}})
 	</button>
 {{/with}}
