Updating with layout/design changes.

--- a/site/css/bootstrap-responsive.css
+++ b/site/css/bootstrap-responsive.css
@@ -487,6 +487,8 @@
     overflow: visible !important;
   }
 }
+
+/*
 @media (min-width: 1200px) {
   .row {
     margin-left: -30px;
@@ -684,3 +686,4 @@
     margin-left: 30px;
   }
 }
+*/
