--- a/site/css/main.css
+++ b/site/css/main.css
@@ -1,5 +1,5 @@
 body {
-	font: 120% Merriweather, Georgia;
+	font: 15px "Helvetica Neue", Helvetica, Arial;
 	font-weight: 300;
 	line-height: 1.5;
 	width: auto;
@@ -13,12 +13,13 @@ h5,
 h6 {
 	font-weight: 600;
 	color: #594A43;
-	text-shadow: 1px 1px 0 #7D2A2F;
+	/*text-shadow: 1px 1px 0 #7D2A2F;*/
+	font:100% Oswald, Helvetica;
 }
 
 h2 {
 	margin: 10px 0;
-	font-size: 30px;
+	font-size: 20px;
 }
 
 a {
@@ -30,8 +31,13 @@ a:hover {
 	color: #787e7e;
 }
 
+.nav-tabs > li > a, .nav-pills > li > a{
+	line-height:23px;
+}
+
 p {
-	font: 100% Merriweather, Georgia;
+	/*font: 100% Merriweather, Georgia;*/
+	font-size:14px;
 	line-height: 1.5;
 	font-weight: 300;
 }
@@ -44,7 +50,7 @@ hr {
 header h1 {
 	font-size: 100px;
 	line-height: 1.2;
-	text-shadow: 2px 2px 1px #7D2A2F;
+	/*text-shadow: 2px 2px 1px #7D2A2F;*/
 	font-weight: 900;
 }
 
@@ -53,12 +59,16 @@ header p {
 }
 
 header .btn-large {
-	font-size: 25px;
+	font-size: 20px;
 	margin-right: 10px;
 }
 
 header nav {
 	margin: 20px 0;
+}
+
+.nav-tabs > li, .nav-pills > li{
+	clear:both;
 }
 
 .btn {
@@ -93,8 +103,8 @@ header nav {
 }
 
 .row {
-	margin-top: 40px;
-	margin-bottom: 40px;
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
 
 .hero-unit {
@@ -201,6 +211,9 @@ header nav {
 	right: 20px;
 }
 
+
+
+
 .credit a {
 	margin: 0 5px;
 }
@@ -260,12 +273,28 @@ header nav {
 }
 
 
+.navbar{
+	background-color: #CF5258;
+	background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(255, 119, 119, .8)), to(rgba(255, 73, 73, .2)));
+	background-image: -webkit-linear-gradient(rgba(255, 119, 119, .8), rgba(255, 73, 73, .2));
+	background-image: -moz-linear-gradient(rgba(255, 119, 119, .8), rgba(255, 73, 73, .2));
+	background-image: -o-linear-gradient(rgba(255, 119, 119, .8), rgba(255, 73, 73, .2));
+	box-shadow: inset 0 -1px 1px rgba(255, 255, 255, .15);
+	text-shadow: 0 -1px 1px rgba(146, 46, 46, .7);
+	-webkit-transition: background-color .2s ease-in-out, -webkit-transform .1s ease-in-out;
+	-moz-transition: background-color .2s ease-in-out, -moz-transform .1s ease-in-out;
+	-o-transition: background-color .2s ease-in-out, -o-transform .1s ease-in-out;
+	transition: background-color .2s ease-in-out, transform .1s ease-in-out;
+	padding-left:10px;
+}
+
+
 
 .button {
 	display: inline-block;
 	margin: 10px;
 	border-radius: 8px;
-	font-size: 25px;
+	font-size: 16px;
 	color: #fff;
 	box-shadow: 0 8px 0 #C53737, 0 15px 20px rgba(0, 0, 0, .35);
 	-webkit-transition: -webkit-box-shadow .1s ease-in-out;
@@ -276,7 +305,7 @@ header nav {
 
 .button span {
 	display: inline-block;
-	padding: 20px 30px;
+	padding: 13px 26px;
 	background-color: #CF5258;
 	background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(255, 119, 119, .8)), to(rgba(255, 73, 73, .2)));
 	background-image: -webkit-linear-gradient(rgba(255, 119, 119, .8), rgba(255, 73, 73, .2));
@@ -312,4 +341,67 @@ header nav {
 .button small {
 	color: #666;
 	font-size: 12px;
+}
+
+
+
+/*****************************/
+
+.aquarius-base {
+	/*
+	border: 1px solid #1E72A1;
+	background: #84E4F6;
+	background: -moz-linear-gradient(top, rgba(132, 228, 246, 1) 1%, rgba(68, 175, 228, 1) 2%, rgba(47, 138, 216, 1) 96%, rgba(53, 159, 223, 1) 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,rgba(132, 228, 246, 1)), color-stop(2%,rgba(68, 175, 228, 1)), color-stop(96%,rgba(47, 138, 216, 1)), color-stop(100%,rgba(53, 159, 223, 1)));
+	background: -webkit-linear-gradient(top, rgba(132, 228, 246, 1) 1%,rgba(68, 175, 228, 1) 2%,rgba(47, 138, 216, 1) 96%,rgba(53, 159, 223, 1) 100%);
+	background: -o-linear-gradient(top, rgba(132, 228, 246, 1) 1%,rgba(68, 175, 228, 1) 2%,rgba(47, 138, 216, 1) 96%,rgba(53, 159, 223, 1) 100%);
+	background: -ms-linear-gradient(top, rgba(132, 228, 246, 1) 1%,rgba(68, 175, 228, 1) 2%,rgba(47, 138, 216, 1) 96%,rgba(53, 159, 223, 1) 100%);
+	background: linear-gradient(top, rgba(132, 228, 246, 1) 1%,rgba(68, 175, 228, 1) 2%,rgba(47, 138, 216, 1) 96%,rgba(53, 159, 223, 1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#84e4f6', endColorstr='#359fdf',GradientType=0 );
+	border-top: 1px solid #2077A5;
+	border-bottom: 1px solid #124E7E;
+	*/
+	background:#111;
+}
+
+.aquarius-buttonholder{
+	height: 60px;
+	width: 360px;
+	padding: 7px 10px 7px 20px;
+	-webkit-border-radius: 6px;
+	border-radius: 6px;
+	background: -moz-linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.26) 1%, rgba(255, 255, 255, 0.26) 96%, rgba(255, 255, 255, 0.26) 98%, rgba(255, 255, 255, 0.35) 99%, rgba(255, 255, 255, 0.44) 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255, 255, 255, 1)), color-stop(1%,rgba(255, 255, 255, 0.26)), color-stop(96%,rgba(255, 255, 255, 0.26)), color-stop(98%,rgba(255, 255, 255, 0.26)), color-stop(99%,rgba(255, 255, 255, 0.35)), color-stop(100%,rgba(255, 255, 255, 0.44)));
+	background: -webkit-linear-gradient(top, rgba(255, 255, 255, 1) 0%,rgba(255, 255, 255, 0.26) 1%,rgba(255, 255, 255, 0.26) 96%,rgba(255, 255, 255, 0.26) 98%,rgba(255, 255, 255, 0.35) 99%,rgba(255, 255, 255, 0.44) 100%);
+	background: -o-linear-gradient(top, rgba(255, 255, 255, 1) 0%,rgba(255, 255, 255, 0.26) 1%,rgba(255, 255, 255, 0.26) 96%,rgba(255, 255, 255, 0.26) 98%,rgba(255, 255, 255, 0.35) 99%,rgba(255, 255, 255, 0.44) 100%);
+	background: -ms-linear-gradient(top, rgba(255, 255, 255, 1) 0%,rgba(255, 255, 255, 0.26) 1%,rgba(255, 255, 255, 0.26) 96%,rgba(255, 255, 255, 0.26) 98%,rgba(255, 255, 255, 0.35) 99%,rgba(255, 255, 255, 0.44) 100%);
+	background: linear-gradient(top, rgba(255, 255, 255, 1) 0%,rgba(255, 255, 255, 0.26) 1%,rgba(255, 255, 255, 0.26) 96%,rgba(255, 255, 255, 0.26) 98%,rgba(255, 255, 255, 0.35) 99%,rgba(255, 255, 255, 0.44) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#70ffffff',GradientType=0 );
+	-webkit-box-shadow: 0px 1px 5px -1px rgba(20, 20, 20, 0.8);
+	box-shadow: 0px 1px 5px -1px rgba(20, 20, 20, 0.8);
+}
+
+.aquarius-button{
+	padding: 15px 22px;
+	top: 14px;
+	position: relative;
+	color:white;
+	-webkit-border-radius: 3px;
+	-webkit-font-smoothing: antialiased;
+	border-radius: 3px;
+	border: 1px solid #1E72A1;
+	background: #84E4F6;
+	background: -moz-linear-gradient(top, rgba(132, 228, 246, 1) 1%, rgba(68, 175, 228, 1) 2%, rgba(47, 138, 216, 1) 96%, rgba(53, 159, 223, 1) 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,rgba(132, 228, 246, 1)), color-stop(2%,rgba(68, 175, 228, 1)), color-stop(96%,rgba(47, 138, 216, 1)), color-stop(100%,rgba(53, 159, 223, 1)));
+	background: -webkit-linear-gradient(top, rgba(132, 228, 246, 1) 1%,rgba(68, 175, 228, 1) 2%,rgba(47, 138, 216, 1) 96%,rgba(53, 159, 223, 1) 100%);
+	background: -o-linear-gradient(top, rgba(132, 228, 246, 1) 1%,rgba(68, 175, 228, 1) 2%,rgba(47, 138, 216, 1) 96%,rgba(53, 159, 223, 1) 100%);
+	background: -ms-linear-gradient(top, rgba(132, 228, 246, 1) 1%,rgba(68, 175, 228, 1) 2%,rgba(47, 138, 216, 1) 96%,rgba(53, 159, 223, 1) 100%);
+	background: linear-gradient(top, rgba(132, 228, 246, 1) 1%,rgba(68, 175, 228, 1) 2%,rgba(47, 138, 216, 1) 96%,rgba(53, 159, 223, 1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#84e4f6', endColorstr='#359fdf',GradientType=0 );
+	border-top: 1px solid #2077A5;
+	border-bottom: 1px solid #124E7E;
+	font-weight: bold;
+	font-size: 16px;
+	font-family: Helvetica, Arial, sans-serif;
+	letter-spacing: -1px;
 }
