--- a/site/css/main.css
+++ b/site/css/main.css
@@ -181,6 +181,49 @@ p .label {
 	padding: 9px 70px 9px 15px;
 }
 
+.quote {
+	border: none;
+	margin: 20px 0;
+}
+
+.quote p {
+	font-size: 17px;
+	line-height: 1.3;
+}
+
+.quote p:before {
+	content: '“';
+	font-size: 50px;
+	opacity: .15;
+	position: absolute;
+	top: -20px;
+	left: 3px;
+}
+
+.quote p:after {
+	content: '”';
+	font-size: 50px;
+	opacity: .15;
+	position: absolute;
+	bottom: -42px;
+	right: 3px;
+}
+
+.quote footer {
+	position: absolute;
+	bottom: -60px;
+	left: 12px;
+}
+
+.quote footer img {
+	border-radius: 3px;
+}
+
+.quote footer a {
+	margin-left: 5px;
+	vertical-align: middle;
+}
+
 .popover-title a {
 	font-size: 13px;
 	line-height: 18px;
@@ -188,6 +231,33 @@ p .label {
 	top: 16px;
 	right: 20px;
 }
+
+.speech-bubble {
+	position: relative;
+	padding: 10px;
+	background: rgba(0, 0, 0, .04);
+	border-radius: 5px;
+}
+
+.speech-bubble:after {
+	content: '';
+	position: absolute;
+	top: 100%;
+	left: 20px;
+	border: 13px solid transparent;
+	border-top-color: rgba(0, 0, 0, .04);
+}
+/*
+.speech-bubble:after {
+	content: '';
+	position: absolute;
+	width: 0;
+	top: 16px;
+	left: -50px;
+	bottom: auto;
+	border-width: 10px 50px 10px 0;
+	border-color: transparent rgba(255, 255, 255, .5);
+}*/
 
 .zocial.red {
 	background-color: #a82400;
