--- a/site/css/main.css
+++ b/site/css/main.css
@@ -129,6 +129,22 @@ header nav a:first-child {
 	position: relative; /* popover */
 }
 
+.applist li[data-routing]:after {
+	content: 'R';
+	position: relative;
+	top: -3px;
+	font-size: 9px;
+	padding: 1px 3px 1px;
+	background-color: rgba(0, 0, 0, .2);
+	border-radius: 3px;
+	font-weight: bold;
+	line-height: 13px;
+	color: white;
+	vertical-align: middle;
+	white-space: nowrap;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+}
+
 .applist .label,
 p .label {
 	position: relative;
