Add dynamic quote changer + minor improvements

--- a/site/css/main.css
+++ b/site/css/main.css
@@ -92,6 +92,7 @@ header nav a:first-child {
 	height: auto;
 	max-width: 558px;
 	margin-top: 12px;
+	float: right;
 }
 
 .tagline2 {
@@ -167,14 +168,6 @@ p .label {
 	columns: 2;
 }
 
-.applist.labs {
-	-webkit-columns: 3;
-	-moz-columns: 3;
-	-ms-columns: 3;
-	-o-columns: 3;
-	columns: 3;
-}
-
 .credit a {
 	margin: 0 5px;
 	white-space: nowrap;
@@ -199,12 +192,13 @@ p .label {
 
 .quote {
 	border: none;
-	margin: 20px 0;
+	margin: 20px 0 70px 0;
 }
 
 .quote p {
 	font-size: 17px;
 	line-height: 1.3;
+	font-style: italic;
 }
 
 .quote p:before {
@@ -263,17 +257,6 @@ p .label {
 	border: 13px solid transparent;
 	border-top-color: rgba(0, 0, 0, .04);
 }
-/*
-.speech-bubble:after {
-	content: '';
-	position: absolute;
-	width: 0;
-	top: 16px;
-	left: -50px;
-	bottom: auto;
-	border-width: 10px 50px 10px 0;
-	border-color: transparent rgba(255, 255, 255, .5);
-}*/
 
 .zocial.red {
 	background-color: #a82400;
