--- a/dependency-examples/backbone_require/js/templates/todos.html
+++ b/dependency-examples/backbone_require/js/templates/todos.html
@@ -1,6 +1,6 @@
     <div class="view">
       <input class="toggle" type="checkbox" <%= completed ? 'checked="checked"' : '' %> />
-      <label><%= title %></label>
+      <label><%- title %></label>
       <button class="destroy"></button>
     </div>
-    <input class="edit" type="text" value="<%= title %>" />
+    <input class="edit" type="text" value="<%- title %>" />
