Ember+Require app: Apply the fix from Ember app for showing selected filter in the filter bar. Fixes #220

--- a/dependency-examples/emberjs_require/js/app/templates/filters.html
+++ b/dependency-examples/emberjs_require/js/app/templates/filters.html
@@ -1,11 +1,11 @@
 <ul id="filters">
 	<li>
-		<a {{action showAll href=true}}>All</a>
+		<a {{action showAll href=true}} {{bindAttr class="view.isAll:selected"}}>All</a>
 	</li>
 	<li>
-		<a {{action showActive href=true}}>Active</a>
+		<a {{action showActive href=true}} {{bindAttr class="view.isActive:selected"}}>Active</a>
 	</li>
 	<li>
-		<a {{action showCompleted href=true}}>Completed</a>
+		<a {{action showCompleted href=true}} {{bindAttr class="view.isCompleted:selected"}}>Completed</a>
 	</li>
 </ul>
