Convert from .select() to .focus()
#203

--- a/labs/architecture-examples/rappidjs/app/view/TodoView.xml
+++ b/labs/architecture-examples/rappidjs/app/view/TodoView.xml
@@ -18,7 +18,7 @@
 					this.set( 'editing', true );
 					e.preventDefault();
 
-					this.$.inputElement.$el.select();
+					this.$.inputElement.$el.focus();
 					return false;
 				},
 
