--- a/labs/architecture-examples/sammyjs/css/app.css
+++ b/labs/architecture-examples/sammyjs/css/app.css
@@ -1,4 +1,3 @@
-
 body { margin: 0; padding: 0; font-family: Helvetica; color: #444; }
 #surface { position: relative; margin: 0 auto; width: 600px; }
 h1 { position: relative; top: 18px; z-index: 2; margin: 0; padding: 0; width: 100%; height: 1.2em; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; font-size: 25px; font-weight: normal; }
@@ -173,7 +172,7 @@ body {
 	margin: 0 10px 0 7px;
 	float: left;
 }
-#todo-list .done .todo-content {
+#todo-list .done {
 	text-decoration: line-through;
 	color: #777777;
 }
