--- a/labs/architecture-examples/derbyjs/views/todos/index.html
+++ b/labs/architecture-examples/derbyjs/views/todos/index.html
@@ -1,11 +1,5 @@
-<head:>
+<Head:>
 	<link href=/base.css rel=stylesheet>
-	<!-- The following ie inclusion is useless as it'll be stripped
-		 out before getting to the client, but serves as a reminder
-		 that it needs to be sorted out for ie compatability :) -->
-	<!--[if IE]>
-	<script src="/ie.js"></script>
-	<![endif]-->
 
 <Title:>
   DerbyJS • TodoMVC
@@ -13,57 +7,59 @@
 <Header:>
 	<ui:connectionAlert>
 
-<TodoHeader:>
+<Body:>
+	<section id="todoapp">
+		<app:todoHeader>
+
+		<section id="main" class="{#unless _list.shown}empty-list{/}">
+			<input id="toggle-all" type="checkbox" checked="{noItems(_list.active)}" x-bind=click:clickToggleAll>
+			<label for="toggle-all">Mark all as complete</label>
+			<ul id=todo-list>{#each _list.shown}<app:todo>{/}</ul>
+		</section>
+
+		<app:todoFooter>
+	</section>
+	<app:info>
+
+<todoHeader:>
 	<header id="header">
 		<h1>todos</h1>
 		<form x-bind=submit:add><input id="new-todo" placeholder="What needs to be done?" autofocus value={_newTodo}></form>
 	</header>
 
-<Body:>
-	<section id="todoapp">
-		<app:TodoHeader>
-
-		<section id="main" class="{#unless _todoList}empty-list{/}">
-			<input id="toggle-all" type="checkbox" checked="{_group.all_completed}">
-			<label for="toggle-all">Mark all as complete</label>
-			<ul id=todo-list class={_filter}>{#each _todoList}<app:todo>{/}</ul>
-		</section>
-
-		<app:TodoFooter>
-	</section>
-	<app:Info>
-
 <todo:>
 	<li data-id={{id}} class="{#if .completed}completed{else}active{/}{#if ._editing} editing{/}">
 		<div>
-			<input class="toggle" type="checkbox" checked={.completed} x-bind=change:checkAllCompleted>
-			<form x-bind=submit:endEdit>
-			<input class="text" x-bind="focus:startEdit, blur:endEdit" value="{.text}">
+			<input class="toggle" type="checkbox" checked={.completed}>
+			<form x-bind=submit:submitEdit>
+				<input class="text" x-bind="focus:startEdit, blur:endEdit" value="{.text}">
 			</form>
 			<button class="destroy" x-bind=click:del></button>
 		</div>
   </li>
 
-<TodoFooter:>
-	<footer id="footer" class="{#unless _todoList}empty-list{/}">
-	<span id="todo-count"><strong>{_stats.remaining}</strong> item{#unless _stats.oneOnly}s{/} left</span>
+<todoFooter:>
+	<footer id="footer" class="{#unless _list.all}empty-list{/}">
+	<span id="todo-count"><strong>{_list.active.length}</strong> item{#unless equal(_list.active.length, 1)}s{/} left</span>
 		<ul id="filters">
 			<li class="all">
-				<a href="/{{_group.id}}" class="{#unless _filter}selected{/}">All</a>
+				<a href="/{{_groupName}}" class="{#if equal(_filter, 'all')}selected{/}">All</a>
 			</li>
 			<li class="active">
-				<a href="/{{_group.id}}/active" class="{#if equal(_filter, 'active')}selected{/}">Active</a>
+				<a href="/{{_groupName}}/active" class="{#if equal(_filter, 'active')}selected{/}">Active</a>
 			</li>
 			<li class="completed">
-				<a href="/{{_group.id}}/completed" class="{#if equal(_filter, 'completed')}selected{/}">Completed</a>
+				<a href="/{{_groupName}}/completed" class="{#if equal(_filter, 'completed')}selected{/}">Completed</a>
 			</li>
 		</ul>
-		<button x-bind=click:clearCompleted id="clear-completed" class="{#unless _stats.completed}non-completed{/}">Clear completed (<span>{_stats.completed}</span>)</button>
+		<button x-bind=click:clearCompleted id="clear-completed" class="{#unless _list.completed}non-completed{/}">
+			Clear completed (<span>{_list.completed.length}</span>)
+		</button>
 	</footer>
 
-<Info:>
+<info:>
 	<footer id="info">
-		<h3>Open this <a href="/{{_group.id}}">ToDo list</a> in another browser, or share it with a friend to collaborate!</h3>
+		<h3>Open this <a href="/{{_groupName}}">ToDo list</a> in another browser, or share it with a friend to collaborate!</h3>
 		<p>Click on a todo to edit</p>
 		<p>Template by <a href="http://github.com/sindresorhus">Sindre Sorhus</a></p>
 		<p>Created by <a href="http://micknelson.wordpress.com">Michael Nelson</a> and <a href="https://github.com/lackac">László Bácsi</a></p>
