--- a/labs/architecture-examples/meteor/client/css/base.css
+++ b/labs/architecture-examples/meteor/client/css/base.css
@@ -23,7 +23,7 @@ button {
 body {
 	font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	line-height: 1.4em;
-	background: #eeeeee url('bg.png');
+	background: #eaeaea url('./client/images/bg.png');
 	color: #4d4d4d;
 	width: 550px;
 	margin: 0 auto;
@@ -57,6 +57,15 @@ body {
 	height: 100%;
 }
 
+#todoapp input::-webkit-input-placeholder {
+	font-style: italic;
+}
+
+#todoapp input:-moz-placeholder {
+	font-style: italic;
+	color: #a9a9a9;
+}
+
 #todoapp h1 {
 	position: absolute;
 	top: -120px;
@@ -79,7 +88,7 @@ body {
 	border-radius: inherit;
 }
 
-#todoapp header:before {
+#header:before {
 	content: '';
 	position: absolute;
 	top: 0;
@@ -96,20 +105,13 @@ body {
 	background: -ms-linear-gradient(top, rgba(132, 110, 100, 0.8), rgba(101, 84, 76, 0.8));
 	background: linear-gradient(top, rgba(132, 110, 100, 0.8), rgba(101, 84, 76, 0.8));
 	filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='#9d8b83', EndColorStr='#847670');
-	border-radius: inherit;
-}
-
-#todoapp input::-webkit-input-placeholder {
-	font-style: italic;
-}
-
-#todoapp input:-moz-placeholder {
-	font-style: italic;
-	color: #a9a9a9;
+	border-top-left-radius: 1px;
+	border-top-right-radius: 1px;
 }
 
 #new-todo,
 .edit {
+	position: relative;
 	margin: 0;
 	width: 100%;
 	font-size: 24px;
@@ -137,7 +139,6 @@ body {
 	padding: 16px 16px 16px 60px;
 	border: none;
 	background: rgba(0, 0, 0, 0.02);
-	position: relative;
 	z-index: 2;
 	box-shadow: none;
 }
@@ -154,9 +155,12 @@ label[for='toggle-all'] {
 
 #toggle-all {
 	position: absolute;
-	top: -42px;
-	left: 12px;
+	top: -56px;
+	left: -15px;
+	width: 65px;
+	height: 41px;
 	text-align: center;
+	border: none; /* Mobile Safari */
 	-webkit-appearance: none;
 	/*-moz-appearance: none;*/
 	-ms-appearance: none;
@@ -178,15 +182,6 @@ label[for='toggle-all'] {
 
 #toggle-all:checked:before {
 	color: #737373;
-}
-
-/* Need this ugly hack, since only
-WebKit supports styling of inputs */
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-	#toggle-all {
-		top: -52px;
-		left: -11px;
-	}
 }
 
 #todo-list {
@@ -223,7 +218,13 @@ WebKit supports styling of inputs */
 
 #todo-list li .toggle {
 	text-align: center;
-	width: 35px;
+	width: 40px;
+	height: 40px;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	margin: auto 0;
+	border: none; /* Mobile Safari */
 	-webkit-appearance: none;
 	/*-moz-appearance: none;*/
 	-ms-appearance: none;
@@ -234,7 +235,7 @@ WebKit supports styling of inputs */
 #todo-list li .toggle:after {
 	font-size: 18px;
 	content: '✔';
-	line-height: 40px;
+	line-height: 43px; /* 40 + a couple of pixels visual adjustment */
 	font-size: 20px;
 	color: #d9d9d9;
 	text-shadow: 0 -1px 0 #bfbfbf;
@@ -249,8 +250,10 @@ WebKit supports styling of inputs */
 
 #todo-list li label {
 	word-break: break-word;
-	margin: 20px 15px;
-	display: inline-block;
+	padding: 15px;
+	margin-left: 45px;
+	display: block;
+	line-height: 1.2;
 	-webkit-transition: color 0.4s;
 	-moz-transition: color 0.4s;
 	-ms-transition: color 0.4s;
@@ -266,10 +269,12 @@ WebKit supports styling of inputs */
 #todo-list li .destroy {
 	display: none;
 	position: absolute;
-	top: 10px;
+	top: 0;
 	right: 10px;
+	bottom: 0;
 	width: 40px;
 	height: 40px;
+	margin: auto 0;
 	font-size: 22px;
 	color: #a88a8a;
 	-webkit-transition: all 0.2s;
@@ -312,6 +317,7 @@ WebKit supports styling of inputs */
 	right: 0;
 	bottom: -31px;
 	left: 0;
+	height: 20px;
 	z-index: 1;
 	text-align: center;
 }
@@ -322,13 +328,13 @@ WebKit supports styling of inputs */
 	right: 0;
 	bottom: 31px;
 	left: 0;
-	height: 100px;
+	height: 50px;
 	z-index: -1;
 	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3),
 				0 6px 0 -3px rgba(255, 255, 255, 0.8),
 				0 7px 1px -3px rgba(0, 0, 0, 0.3),
-				0 42px 0 -6px rgba(255, 255, 255, 0.8),
-				0 43px 2px -6px rgba(0, 0, 0, 0.2);
+				0 43px 0 -6px rgba(255, 255, 255, 0.8),
+				0 44px 2px -6px rgba(0, 0, 0, 0.2);
 }
 
 #todo-count {
@@ -361,12 +367,12 @@ WebKit supports styling of inputs */
 
 #clear-completed {
 	float: right;
+	position: relative;
 	line-height: 20px;
 	text-decoration: none;
 	background: rgba(0, 0, 0, 0.1);
 	font-size: 11px;
 	padding: 0 10px;
-	position: relative;
 	border-radius: 3px;
 	box-shadow: 0 -1px 0 0 rgba(0, 0, 0, 0.2);
 }
@@ -386,4 +392,15 @@ WebKit supports styling of inputs */
 
 #info a {
 	color: inherit;
+}
+
+/*
+	Hack to remove background from Mobile Safari.
+	Can't use it globally since it destroys checkboxes in Firefox and Opera
+*/
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+	#toggle-all,
+	#todo-list li .toggle {
+		background: none;
+	}
 }
